--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,5 @@ build_flags =
     -fno-inline
 lib_deps =
   sandeepmistry/CAN@^0.3.0
+  adafruit/RTClib@^2.1.1
+  adafruit/Adafruit BusIO@^1.14.3
