--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,10 @@
 {
     "files.associations": {
         "array": "cpp",
-        "string_view": "cpp",
-        "initializer_list": "cpp",
-        "utility": "cpp",
-        "deque": "cpp",
-        "string": "cpp",
-        "unordered_map": "cpp",
-        "unordered_set": "cpp",
-        "vector": "cpp",
-        "typeinfo": "cpp",
-        "new": "cpp",
-        "cmath": "cpp",
-        "system_error": "cpp"
-    },
-    "python-envs.defaultEnvManager": "ms-python.python:system",
-    "python-envs.pythonProjects": []
+        "memory": "cpp",
+        "istream": "cpp",
+        "functional": "cpp",
+        "tuple": "cpp",
+        "utility": "cpp"
+    }
 }
